tests/auto/quick/qquicklistview2/data/singletonModelLifetime.qml
@@ -1,6 +1,6 @@
 import QtQuick 2.15
 import QtQuick.Window 2.15
-import test 1.0
+import SingletonModelLifeTimeTest 1.0
 
 Window {
     id: root
